--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tourly - Travel agancy</title>
+    <title>Adventure - Trek</title>
 
     <!-- 
     - favicon
@@ -20,6 +20,9 @@
     <!-- 
     - google font link
   -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -53,7 +56,7 @@
                 </a>
 
                 <a href="#" class="logo">
-                    <img src="./assets/images/logo.svg" alt="Tourly logo">
+               ADVENTURE TREK
                 </a>
 
                 <div class="header-btn-group">
@@ -101,7 +104,7 @@
                     <div class="navbar-top">
 
                         <a href="#" class="logo">
-                            <img src="./assets/images/logo-blue.sv" alt="Tourly logo">
+                            Adventure Trek
                         </a>
 
                         <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
@@ -116,9 +119,9 @@
                             <a href="#home" class="navbar-link" data-nav-link>home</a>
                         </li>
 
-                        <li>
+                        <!-- <li>
                             <a href="#" class="navbar-link" data-nav-link>about us</a>
-                        </li>
+                        </li> -->
 
                         <li>
                             <a href="#destination" class="navbar-link" data-nav-link>destination</a>
@@ -161,11 +164,11 @@
             <section class="hero" id="home">
                 <div class="container">
 
-                    <h2 class="h1 hero-title">Journey to explore world</h2>
+                    <h2 class="h1 hero-title">Portal to the Majestic Himalayan Peaks</h2>
 
                     <p class="hero-text">
-                        Ac mi duis mollis. Sapiente? Scelerisque quae, penatibus? Suscipit class corporis nostra rem quos voluptatibus habitant? Fames, vivamus minim nemo enim, gravida lobortis quasi, eum.
-                    </p>
+
+                        "Embark on a Journey of Awe and Adventure with Our Gateway to the Himalayas: Unveiling the Majestic Peaks, Enchanting Cultures, and Unforgettable Experiences that Await Your Discovery in this Picturesque Mountainous Wonderland. </p>
 
                     <div class="btn-group">
                         <button class="btn btn-primary">Learn more</button>
@@ -236,7 +239,9 @@
                     <h2 class="h2 section-title">Popular destination</h2>
 
                     <p class="section-text">
-                        Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium. Sit ornare mollitia tenetur, aptent.
+
+                        Explore the Irresistible Allure of a Trendsetting Hotspot
+
                     </p>
 
                     <ul class="popular-list">
@@ -245,7 +250,7 @@
                             <div class="popular-card">
 
                                 <figure class="card-img">
-                                    <img src="./assets/images/popular-1.jpg" alt="San miguel, italy" loading="lazy">
+                                    <img src="./assets/images/popular_destination/kedarnath.png" alt="San miguel, italy" loading="lazy">
                                 </figure>
 
                                 <div class="card-content">
@@ -259,15 +264,15 @@
                                     </div>
 
                                     <p class="card-subtitle">
-                                        <a href="#">Italy</a>
+                                        <a href="#">Uttarakhand</a>
                                     </p>
 
                                     <h3 class="h3 card-title">
-                                        <a href="#">San miguel</a>
+                                        <a href="#">Kedarnath</a>
                                     </h3>
 
                                     <p class="card-text">
-                                        Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                                        Sacred Hindu pilgrimage site in Uttarakhand, home to the ancient Kedarnath Temple dedicated to Lord Shiva.
                                     </p>
 
                                 </div>
@@ -279,7 +284,7 @@
                             <div class="popular-card">
 
                                 <figure class="card-img">
-                                    <img src="./assets/images/popular-2.jpg" alt="Burj khalifa, dubai" loading="lazy">
+                                    <img src="./assets/images/popular_destination/chopta.png" alt="Burj khalifa, dubai" loading="lazy">
                                 </figure>
 
                                 <div class="card-content">
@@ -293,15 +298,16 @@
                                     </div>
 
                                     <p class="card-subtitle">
-                                        <a href="#">Dubai</a>
+                                        <a href="#">Uttarakhand</a>
                                     </p>
 
                                     <h3 class="h3 card-title">
-                                        <a href="#">Burj khalifa</a>
+                                        <a href="#">Chopta</a>
                                     </h3>
 
                                     <p class="card-text">
-                                        Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                                        Scenic hill station, gateway to the Tungnath trek, and base for the Chandrashila summit, attracting nature lovers and trekkers.
+
                                     </p>
 
                                 </div>
@@ -313,7 +319,7 @@
                             <div class="popular-card">
 
                                 <figure class="card-img">
-                                    <img src="./assets/images/popular-3.jpg" alt="Kyoto temple, japan" loading="lazy">
+                                    <img src="./assets/images/popular_destination/kedarkantha.png" alt="Kyoto temple, japan" loading="lazy">
                                 </figure>
 
                                 <div class="card-content">
@@ -327,15 +333,15 @@
                                     </div>
 
                                     <p class="card-subtitle">
-                                        <a href="#">Japan</a>
+                                        <a href="#">Uttarakhand</a>
                                     </p>
 
                                     <h3 class="h3 card-title">
-                                        <a href="#">Kyoto temple</a>
+                                        <a href="#">Kedarkantha</a>
                                     </h3>
 
                                     <p class="card-text">
-                                        Fusce hic augue velit wisi ips quibusdam pariatur, iusto.
+                                        Famous winter trek in Uttarakhand with stunning snowscapes and Himalayan vistas.
                                     </p>
 
                                 </div>
@@ -345,7 +351,7 @@
 
                     </ul>
 
-                    <!-- <button class="btn btn-primary">More destintion</button> -->
+                    <button class="btn btn-primary">More destintion</button>
 
                 </div>
             </section>
@@ -366,8 +372,7 @@
                     <h2 class="h2 section-title">Checkout Our Packeges</h2>
 
                     <p class="section-text">
-                        Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium. Sit ornare mollitia tenetur, aptent.
-                    </p>
+                        Explore Your Next Adventure: Unveiling Our Exquisite Travel Packages Tailored Just for You! </p>
 
                     <ul class="package-list">
 
@@ -375,12 +380,12 @@
                             <div class="package-card">
 
                                 <figure class="card-banner">
-                                    <img src="./assets/images/packege-1.jpg" alt="Experience The Great Holiday On Beach" loading="lazy">
+                                    <img src="./assets/images/popular_destination/chopta.png" alt="Experience The Great Holiday On Beach" loading="lazy">
                                 </figure>
 
                                 <div class="card-content">
 
-                                    <h3 class="h3 card-title">Experience The Great Holiday On Beach</h3>
+                                    <h3 class="h3 card-title">Experience The Great Holiday In Mountains</h3>
 
                                     <p class="card-text">
                                         Laoreet, voluptatum nihil dolor esse quaerat mattis explicabo maiores, est aliquet porttitor! Eaque, cras, aspernatur.
@@ -408,7 +413,7 @@
                                             <div class="meta-box">
                                                 <ion-icon name="location"></ion-icon>
 
-                                                <p class="text">Malaysia</p>
+                                                <p class="text">Uttarakhand</p>
                                             </div>
                                         </li>
 
@@ -433,7 +438,7 @@
                                     </div>
 
                                     <p class="price">
-                                        $750
+                                        &#8377;5999
                                         <span>/ per person</span>
                                     </p>
 
@@ -506,7 +511,7 @@
                                     </div>
 
                                     <p class="price">
-                                        $520
+                                        &#8377;6999
                                         <span>/ per person</span>
                                     </p>
 
@@ -579,7 +584,7 @@
                                     </div>
 
                                     <p class="price">
-                                        $660
+                                        &#8377;8999
                                         <span>/ per person</span>
                                     </p>
 
@@ -613,38 +618,37 @@
                     <h2 class="h2 section-title">Photo's From Travellers</h2>
 
                     <p class="section-text">
-                        Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium. Sit ornare mollitia tenetur, aptent.
-                    </p>
+                        Visual Chronicles of Wanderlust: A Pictorial Expedition through the Eyes of Fellow Travelers, Unveiling the Beauty and Stories Behind Every Photograph. </p>
 
                     <ul class="gallery-list">
 
                         <li class="gallery-item">
                             <figure class="gallery-image">
-                                <img src="./assets/images/gallery-1.jpg" alt="Gallery image">
+                                <img src="https://images.unsplash.com/photo-1571328565610-56f07b8bf3ce?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gallery image">
                             </figure>
                         </li>
 
                         <li class="gallery-item">
                             <figure class="gallery-image">
-                                <img src="./assets/images/gallery-2.jpg" alt="Gallery image">
+                                <img src="https://plus.unsplash.com/premium_photo-1697730418469-c7458f720b92?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gallery image">
                             </figure>
                         </li>
 
                         <li class="gallery-item">
                             <figure class="gallery-image">
-                                <img src="./assets/images/gallery-3.jpg" alt="Gallery image">
+                                <img src="https://images.unsplash.com/photo-1618772446265-3f9f8e6f8487?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gallery image">
                             </figure>
                         </li>
 
                         <li class="gallery-item">
                             <figure class="gallery-image">
-                                <img src="./assets/images/gallery-4.jpg" alt="Gallery image">
+                                <img src="https://images.unsplash.com/photo-1626014303757-6366ef55c4ab?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gallery image">
                             </figure>
                         </li>
 
                         <li class="gallery-item">
                             <figure class="gallery-image">
-                                <img src="./assets/images/gallery-5.jpg" alt="Gallery image">
+                                <img src="https://images.unsplash.com/photo-1622611908679-cbeda47d9404?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Gallery image">
                             </figure>
                         </li>
 
@@ -670,8 +674,7 @@
                         <h2 class="h2 section-title">Ready For Unforgatable Travel. Remember Us!</h2>
 
                         <p class="section-text">
-                            Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque laudantium. Sit ornare mollitia tenetur, aptent.
-                        </p>
+                            Embark on Unforgettable Adventures: Take the First Step Towards Timeless Travel Memories – Engrave the Experience, Cherish the Journey, and Always Remember Us as Your Gateway to Unparalleled Adventures! </p>
                     </div>
 
                     <button class="btn btn-secondary">Contact Us !</button>
