--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                 <div class="footer-brand">
 
                     <a href="#" class="logo">
-                        <img src="./assets/images/logo.svg" alt="Tourly logo">
+                    Adventure Trek
                     </a>
 
                     <p class="footer-text">
