--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             <div class="package-card">
 
                                 <figure class="card-banner">
-                                    <img src="./assets/images/popular_destination/chopta.png" alt="Experience The Great Holiday On Beach" loading="lazy">
+                                    <img src="https://www.paradisechopta.com/images/slider-12.jpg" alt="Experience The Great Holiday On Beach" loading="lazy">
                                 </figure>
 
                                 <div class="card-content">
@@ -453,7 +453,7 @@
                             <div class="package-card">
 
                                 <figure class="card-banner">
-                                    <img src="./assets/images/packege-2.jpg" alt="Summer Holiday To The Oxolotan River" loading="lazy">
+                                    <img src="https://www.paradisechopta.com/images/Campsite.JPG" alt="Summer Holiday To The Oxolotan River" loading="lazy">
                                 </figure>
 
                                 <div class="card-content">
@@ -526,7 +526,7 @@
                             <div class="package-card">
 
                                 <figure class="card-banner">
-                                    <img src="./assets/images/packege-3.jpg" alt="Santorini Island's Weekend Vacation" loading="lazy">
+                                    <img src="https://www.paradisechopta.com/images/slider-09.jpg" alt="Santorini Island's Weekend Vacation" loading="lazy">
                                 </figure>
 
                                 <div class="card-content">
