--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
                     <p class="hero-text">
 
-                        "Embark on a Journey of Awe and Adventure with Our Gateway to the Himalayas: Unveiling the Majestic Peaks, Enchanting Cultures, and Unforgettable Experiences that Await Your Discovery in this Picturesque Mountainous Wonderland. </p>
+                        Embark on a Journey of Awe and Adventure with Our Gateway to the Himalayas: Unveiling the Majestic Peaks, Enchanting Cultures, and Unforgettable Experiences that Await Your Discovery in this Picturesque Mountainous Wonderland. </p>
 
                     <div class="btn-group">
                         <button class="btn btn-primary">Learn more</button>
